--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "mui-datatables": "^4.2.2",
     "multiparty": "^4.2.3",
     "next": "12.2.5",
+    "node-xlsx": "^0.21.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "read-excel-file": "^5.4.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
