--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multiparty": "^4.2.3",
     "next": "12.2.5",
     "node-xlsx": "^0.21.0",
+    "pdfkit": "^0.13.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,7 @@
     "@types/mssql": "^8.1.1",
     "@types/multiparty": "^0.0.33",
     "@types/node": "18.7.13",
+    "@types/pdfkit": "^0.12.6",
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
