feature: added funcion to upload two or more files and refactor create report to return base64

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "base64-stream": "^1.0.0",
     "fast-csv": "^4.3.6",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
@@ -28,6 +29,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/base64-stream": "^1.0.2",
     "@types/formidable": "^2.0.5",
     "@types/mssql": "^8.1.1",
     "@types/multiparty": "^0.0.33",
