bugfix - update env for sql production and validation to render table

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PGUSER=
-PGPASSWORD=
-PGHOST=localhost
+PGUSER=ablcvfwj
+PGPASSWORD=mkPZUbG53wLmur5qjhTBqROkPbFIHdFT
+PGHOST=mouse.db.elephantsql.com
 PGPORT=5432
-PGDATABASE=postgres
+PGDATABASE=ablcvfwj
