--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PGUSER=ablcvfwj
-PGPASSWORD=mkPZUbG53wLmur5qjhTBqROkPbFIHdFT
-PGHOST=mouse.db.elephantsql.com
+PGUSER=
+PGPASSWORD=
+PGHOST=localhost
 PGPORT=5432
-PGDATABASE=ablcvfwj
+PGDATABASE=postgres
