--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@mui/x-data-grid": "^5.17.7",
+    "@mui/x-date-pickers": "^5.0.4",
     "base64-stream": "^1.0.0",
+    "dayjs": "^1.11.5",
     "exceljs": "^4.3.0",
     "fast-csv": "^4.3.6",
     "file-saver": "^2.0.5",
