--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.2",
     "@mui/x-data-grid": "^5.17.7",
     "@mui/x-date-pickers": "^5.0.4",
+    "@react-hook/window-size": "^3.1.1",
     "base64-stream": "^1.0.0",
     "dayjs": "^1.11.5",
     "exceljs": "^4.3.0",
