--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.10.2",
-    "@mui/material": "^5.10.2",
-    "@mui/x-data-grid": "^5.17.7",
-    "@mui/x-date-pickers": "^5.0.4",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
     "base64-stream": "^1.0.0",
     "cookie": "^0.5.0",
@@ -28,7 +23,6 @@
     "mssql": "^9.0.1",
     "multiparty": "^4.2.3",
     "next": "12.2.5",
-    "next-redux-wrapper": "^8.0.0",
     "node-xlsx": "^0.21.0",
     "pdfkit": "^0.13.0",
     "pg": "^8.8.0",
@@ -37,7 +31,6 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
     "read-excel-file": "^5.4.7",
-    "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
@@ -52,9 +45,7 @@
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.8.2"
