--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
+    "react-simple-snackbar": "^1.1.11",
     "read-excel-file": "^5.4.7",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
