--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/crypto-js": "^4.1.1",
+    "axios": "^1.1.3",
     "base64-stream": "^1.0.0",
-    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.5",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "exceljs": "^4.3.0",
@@ -27,7 +30,6 @@
     "pdfkit": "^0.13.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
     "react-simple-snackbar": "^1.1.11",
