--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-iconly": "^2.2.5",
     "react-redux": "^8.0.4",
     "react-simple-snackbar": "^1.1.11",
     "read-excel-file": "^5.4.7",
