feature: added function to added new item to table

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "mssql": "^9.0.1",
     "multiparty": "^4.2.3",
     "next": "12.2.5",
@@ -42,6 +43,7 @@
     "@types/base64-stream": "^1.0.2",
     "@types/file-saver": "^2.0.5",
     "@types/formidable": "^2.0.5",
+    "@types/lodash": "^4.14.186",
     "@types/mssql": "^8.1.1",
     "@types/multiparty": "^0.0.33",
     "@types/node": "18.7.13",
