--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/crypto-js": "^4.1.1",
     "axios": "^1.1.3",
     "base64-stream": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^2.1.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.5",
@@ -23,6 +24,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mssql": "^9.0.1",
     "multiparty": "^4.2.3",
@@ -41,8 +43,10 @@
   },
   "devDependencies": {
     "@types/base64-stream": "^1.0.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/file-saver": "^2.0.5",
     "@types/formidable": "^2.0.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/mssql": "^8.1.1",
     "@types/multiparty": "^0.0.33",
